--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <canvas class="webgl"></canvas>
+        <span class="hint">Press 'h' to toggle UI</span>
         <script src="./script.js" type="module"></script>
     </body>
 </html>
